# hap_parser

./: .gitignore  README.md
.github/workflows/: build.yml
gui/: AppState.cpp  AppState.h  CMakeLists.txt  HapAnalyzer.cpp  HapAnalyzer.h  Info.plist.in  macos_bridge.mm  main.cpp
hap_parser/: byte_view.h  hap_parser.cpp  hap_parser.h  hap_parser_main.cpp  main.cpp  runtime_verify.cpp  runtime_verify.h
hap_parser.xcodeproj/: project.pbxproj
hap_parser.xcodeproj/xcuserdata/lasysloth.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/: test_runner.cpp
